--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,6 @@ section {
   text-align: justify;
 }
 
-
 .maincontainer-section h2 {
   font-size: 4rem;
   text-align: center;
@@ -255,6 +254,7 @@ aside {
   line-height: 1.5;
   font-size: 1.5rem;
 }
+
 .aside-news h4 {
   background-image: linear-gradient(
     to left,
@@ -619,57 +619,6 @@ aside {
 
 /*Speakers end here*/
 
-.reviews .slide .text {
-  padding: 2rem;
-  font-size: 1.5rem;
-  font-style: italic;
-  background: #eee;
-  border-radius: 0.5rem;
-  color: #10221b;
-  line-height: 2;
-  position: relative;
-  z-index: 0;
-  margin-bottom: 3rem;
-}
-
-.reviews .slide .text::before {
-  content: "";
-  position: absolute;
-  bottom: -1.5rem;
-  left: 0.7rem;
-  height: 3rem;
-  width: 3rem;
-  background: #eee;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.reviews .slide .user {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  gap: 1rem;
-}
-
-.reviews .slide .user img {
-  height: 7rem;
-  width: 7rem;
-  border-radius: 50%;
-}
-
-.reviews .slide .user h3 {
-  font-size: 2rem;
-  color: #10221b;
-}
-
-.reviews .slide .user span {
-  color: #219150;
-  font-size: 1.5rem;
-}
-
 /* Sponsor section*/
 
 .clients .silde {
@@ -691,9 +640,7 @@ aside {
       from(rgba(0, 0, 0, 0.5)),
       to(rgba(0, 0, 0, 0.5))
     ),
-    url(../images/footer-bg.jpg) no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/footer-bg.jpg) no-repeat;
+    url(../images/footer2.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -721,7 +668,7 @@ aside {
 }
 
 .footer .box-container .box a i {
-  color: #219150;
+  color: rgb(0, 183, 199);
   padding-right: 0.5rem;
 }
 
@@ -745,6 +692,8 @@ aside {
 .footer .credit span {
   color: #219150;
 }
+
+/* Footer section ends */
 
 @media (max-width: 1200px) {
   .header {
