--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ html::-webkit-scrollbar-track {
 }
 
 html::-webkit-scrollbar-thumb {
-  background: #10221b;
+  background: rgb(35, 31, 32);
 }
 
 section {
@@ -48,7 +48,8 @@ section {
 }
 
 .btn:hover {
-  background: #10221b;
+  background: rgb(84, 198, 211);
+  border-color: #fff;
   color: #fff;
 }
 
@@ -93,7 +94,7 @@ section {
   margin-left: 2rem;
   font-size: 1.7rem;
   font-weight: bold;
-  color: #10221b;
+  color: rgb(35, 31, 32);
 }
 
 .header .navbar a:hover {
@@ -103,7 +104,7 @@ section {
 .header .navbar #nav-close {
   font-size: 5rem;
   cursor: pointer;
-  color: #10221b;
+  color: rgb(0, 171, 189);
   display: none;
 }
 
@@ -285,95 +286,35 @@ aside {
 }
 
 /*End*/
-.home {
-  padding: 0;
+
+/* Gallery section */
+
+.gallery .slide {
+  border: 0.2rem solid #020202;
+  height: 40rem;
 }
 
-.home .box {
+.gallery .slide .image {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
+
+.gallery .slide .image img {
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
+}
+
+/* Gallery ends */
+
+/* Travel section */
+
+.travel {
   min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-size: cover !important;
-  background-position: center !important;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  padding: 2rem 9%;
-}
-
-.home .box.second {
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-}
-
-.home .box .content {
-  width: 50rem;
-}
-
-.home .box .content span {
-  font-size: 4rem;
-  color: #10221b;
-}
-
-.home .box .content h3 {
-  font-size: 6rem;
-  color: #219150;
-  padding-top: 0.5rem;
-  text-transform: uppercase;
-}
-
-.home .box .content p {
-  line-height: 2;
-  color: #10221b;
-  font-size: 1.5rem;
-  padding: 1rem 0;
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  font-size: 3rem;
-  color: #10221b;
-}
-
-.category .box-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(29rem, 1fr)) [auto-fit];
-  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
-  gap: 1.5rem;
-}
-
-.category .box-container .box {
-  text-align: center;
-  padding: 1rem;
-}
-
-.category .box-container .box img {
-  height: 20rem;
-  width: 20rem;
-  border-radius: 50%;
-  margin-bottom: 1rem;
-}
-
-.category .box-container .box h3 {
-  font-size: 2rem;
-  color: #219150;
-}
-
-.category .box-container .box p {
-  font-size: 1.5rem;
-  color: #10221b;
-  padding: 1rem 0;
-  line-height: 2;
-}
-
-.about {
-  background: #eee;
+  padding-top: 12%;
+  background: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -385,7 +326,7 @@ aside {
   gap: 2rem;
 }
 
-.about .image {
+.travel .image {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 42rem;
   flex: 1 1 42rem;
@@ -393,105 +334,42 @@ aside {
   padding-bottom: 5rem;
 }
 
-.about .image img {
+.travel .image img {
   width: 100%;
   -webkit-box-shadow: 4rem 4rem 0 rgba(0, 0, 0, 0.1);
   box-shadow: 4rem 4rem 0 rgba(0, 0, 0, 0.1);
+  image-rendering: smooth;
 }
 
-.about .content {
+.travel .content {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 42rem;
   flex: 1 1 42rem;
 }
 
-.about .content h3 {
-  font-size: 3rem;
-  color: #219150;
+.travel .content h3 {
+  font-size: 4rem;
+  font-weight: bold;
+  text-align: center;
+  color: rgb(0, 125, 190);
 }
 
-.about .content p {
+.travel .content p {
   font-size: 1.5rem;
   color: #10221b;
   padding: 1rem 0;
   line-height: 2;
 }
 
-.shop .slide {
-  border: 0.2rem solid #10221b;
-}
+/* Travel ends */
 
-.shop .slide:hover .image .icons {
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-}
+/* Accomodation section */
 
-.shop .slide .image {
-  position: relative;
-  overflow: hidden;
-  height: 30rem;
-  width: 100%;
-}
-
-.shop .slide .image img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.shop .slide .image .icons {
-  width: 100%;
-  position: absolute;
-  bottom: 2rem;
-  left: 0;
-  text-align: center;
-  z-index: 10;
-  -webkit-transform: translateY(7rem);
-  transform: translateY(7rem);
-}
-
-.shop .slide .image .icons a {
-  height: 4.5rem;
-  width: 4.5rem;
-  line-height: 4.5rem;
-  font-size: 1.7rem;
-  background: #10221b;
-  color: #fff;
-  margin: 0 0.2rem;
-}
-
-.shop .slide .image .icons a:hover {
-  background: #219150;
-}
-
-.shop .slide .content {
-  padding: 1rem 0;
-  text-align: center;
-}
-
-.shop .slide .content h3 {
-  font-size: 2rem;
-  color: #10221b;
-}
-
-.shop .slide .content .price {
-  padding: 1rem 0;
-  padding-top: 0.5rem;
-  font-size: 2rem;
-  color: #219150;
-}
-
-.shop .slide .content .stars i {
-  font-size: 1.7rem;
-  color: #10221b;
-}
-
-.packages {
+.accomodation {
   background: #eee;
 }
 
-.packages .box-container {
+.accomodation .box-container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(32rem, 1fr)) [auto-fit];
@@ -499,33 +377,33 @@ aside {
   gap: 1.5rem;
 }
 
-.packages .box-container .box {
+.accomodation .box-container .box {
   text-align: center;
   background: #fff;
-  border: 0.2rem solid #10221b;
+  border: 0.2rem solid #000000;
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
 }
 
-.packages .box-container .box:hover {
-  background: #10221b;
+.accomodation .box-container .box:hover {
+  background: rgb(0, 125, 190);
 }
 
-.packages .box-container .box:hover .content > * {
+.accomodation .box-container .box:hover .content > * {
   color: #fff;
 }
 
-.packages .box-container .box:hover .btn {
+.accomodation .box-container .box:hover .btn {
   border-color: #fff;
 }
 
-.packages .box-container .box:hover .btn:hover {
+.accomodation .box-container .box:hover .btn:hover {
   background: #fff;
-  color: #10221b;
+  color: rgb(99, 100, 102);
 }
 
-.packages .box-container .box .image {
+.accomodation .box-container .box .image {
   height: 25rem;
   overflow: hidden;
   padding: 2rem;
@@ -533,7 +411,7 @@ aside {
   border-radius: 0.5rem;
 }
 
-.packages .box-container .box .image img {
+.accomodation .box-container .box .image img {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
@@ -541,26 +419,64 @@ aside {
   border-radius: 0.5rem;
 }
 
-.packages .box-container .box .content {
+.accomodation .box-container .box .content {
   padding: 2rem;
 }
 
-.packages .box-container .box .content h3 {
+.accomodation .box-container .box .content h3 {
   font-size: 2rem;
-  color: #10221b;
+  color: rgb(35, 31, 32);
 }
 
-.packages .box-container .box .content p {
+.accomodation .box-container .box .content p {
   font-size: 1.5rem;
-  color: #10221b;
+  color: rgb(35, 31, 32);
   padding: 1rem 0;
   line-height: 2;
 }
 
-.packages .box-container .box .content .price {
+.accomodation .box-container .box .content .price {
   font-size: 2rem;
-  color: #219150;
+  color: rgb(0, 183, 199);
 }
+
+/* Accomodation ends */
+
+/* Sightseeing section */
+
+.sight .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(29rem, 1fr)) [auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+  gap: 1.5rem;
+}
+
+.sight .box-container .box {
+  text-align: center;
+  padding: 1rem;
+}
+
+.sight .box-container .box img {
+  height: 20rem;
+  width: 20rem;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
+
+.sight .box-container .box h3 {
+  font-size: 2rem;
+  color: rgb(99, 100, 102);
+}
+
+.sight .box-container .box p {
+  font-size: 1.5rem;
+  color: rgb(35, 31, 32);
+  padding: 1rem 0;
+  line-height: 2;
+}
+
+/* Sightseeing ends */
 
 /*Speakers Section*/
 
@@ -621,15 +537,112 @@ aside {
 
 /* Sponsor section*/
 
-.clients .silde {
+.sponsors .silde {
   text-align: center;
 }
 
-.clients .silde img {
+.sponsors .silde img {
   height: 12rem;
 }
 
 /* Sponsor ends */
+
+/* Register Login */
+
+.form {
+  min-height: 100vh;
+  padding-top: 2%;
+  background-size: cover !important;
+  image-rendering: pixelated;
+}
+
+.signin-register {
+  width: 38rem;
+  height: 48rem;
+  position: relative;
+  margin: 6% auto;
+  background: rgb(167, 169, 172);
+  padding: 5px;
+  overflow: hidden;
+  border-radius: 2rem;
+}
+
+.button-box {
+  width: 22rem;
+  margin: 35px auto;
+  position: relative;
+  box-shadow: 0 0 2rem 9px rgb(84, 198, 211);
+  border-radius: 3rem;
+}
+
+.toogle-btn {
+  padding: 1rem 3rem;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: relative;
+}
+
+#btn {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 110px;
+  height: 100%;
+  background: linear-gradient(to right, rgb(0, 171, 189), rgb(0, 125, 190));
+  border-radius: 30px;
+  transition: .5s;
+} 
+
+.input-form {
+  top: 18rem;
+  position: absolute;
+  width: 28rem;
+  transition: .5s;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px 0;
+  margin: 5px;
+  border-style: inset;
+  outline: none;
+  background: transparent;
+}
+
+.login-btn {
+  width: 85%;
+  padding: 10px 30px;
+  cursor: pointer;
+  display:block;
+  margin: auto;
+  background: linear-gradient(to right, rgb(0, 171, 189), rgb(0, 125, 190));
+  border: 0;
+  outline: none;
+  border-radius: 30px;
+}
+
+.checkbox-remember {
+  margin: 30px 10px 30px 0;
+}
+
+span {
+  color: inherit;
+  font-size: 12px;
+  bottom: 68px;
+  position: absolute;
+}
+
+#signin {
+  left: 5rem;
+}
+
+#register{
+  left: 45rem;
+}
+
+/* Sign up ends */
 
 /* Footer section*/
 .footer {
@@ -673,7 +686,7 @@ aside {
 }
 
 .footer .box-container .box a:hover {
-  color: #219150;
+  color: rgb(99, 100, 102);
 }
 
 .footer .box-container .box a:hover i {
@@ -690,7 +703,7 @@ aside {
 }
 
 .footer .credit span {
-  color: #219150;
+  color: rgb(0, 183, 199);
 }
 
 /* Footer section ends */
@@ -708,28 +721,6 @@ aside {
   html {
     font-size: 55%;
     scroll-padding-top: 7rem;
-  }
-  .home .box {
-    padding: 2rem;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-position: right !important;
-  }
-  .home .box.second {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-position: left !important;
-  }
-  .home .box .content {
-    text-align: center;
-  }
-  .home .box .content span {
-    font-size: 3rem;
-  }
-  .home .box .content h3 {
-    font-size: 4rem;
   }
 }
 
